- Feature: developed the ShowIf API, allowing conditional visibility of elements based on rendering context (initially supports PageNumber only)
- Feature: added functionality to specify unit types for the Spacing property in the Row element, improving Fluent API consistency
- Optimization: reduced memory usage and decreased Garbage Collector pressure in the FluentAPI, enhancing performance
- Improvement: integrated CancellationToken support in the ShowInPreviewer method
- Improvement: simplified DynamicComponent usage by introducing a state-less component model
- Testing: introduced a new internal layout-testing engine (prototype)

Version 2023.12.1
- Fixed: table layout renders incorrectly if one of its cells spans at least three pages

Version 2023.12.2
- Fixed: The hyperlink element was annotating the incorrect location, in specific layout scenarios when used with right-to-left content direction
- Enhancement: Improved layout stability for dynamic components utilizing the TotalPages property to generate content
- Maintenance: The QuestPDF Previewer application has been updated to utilize the latest version of the Avalonia library

Version 2023.12.3
- Improvement: enhanced the automated layout issue detection algorithm to cover a broader range of cases.
- Update: upgraded the SkiaSharp dependency to version 2.88.7. This update addresses issues with JPEG images being incorrectly encoded/decoded on ARM devices.
- Maintenance: added .NET 8 as an official build target for the library.

Version 2023.12.4
- Fixed: the TextStyle.LetterSpacing property was not documented correctly, and the FluentAPI code prevented its correct use.

Version 2023.12.5
- Improvement: when drawing content with the Canvas element, the library clips drawn content to the element's boundaries, preventing potential overflow when integrating with other libraries.
- Improved layout stability.